feature: Task Service

--- a/TaskService/pom.xml
+++ b/TaskService/pom.xml
@@ -67,6 +67,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-core</artifactId>
+			<version>1.5.18</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -79,12 +86,15 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<!-- https://mvnrepository.com/artifact/com.netflix.hystrix/hystrix-core -->
+
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${project.parent.version}</version>
 				<configuration>
 					<excludes>
 						<exclude>
