--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 spring.data.mongodb.uri=mongodb://localhost:27017/userData
-spring.application.name=taskmanager
+spring.application.name=USER-SERVICE
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
@@ -13,3 +13,4 @@ spring.security.filter.chain.request-matcher.path.authenticated=true
 #Zipkin server configuration
 spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
+
